# oxi-db

./: Cargo.toml  LICENSE  LICENSE-MIT  README.MD  README.md  RUN.md  example.db
src/: btree.rs  database.rs  error.rs  lib.rs  main.rs  table.rs  types.rs
tests/: btree_tests.rs  database_tests.rs  table_tests.rs
