[package]
name = "oxi-db"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple embedded database for Rust applications"
repository = "https://github.com/yourusername/oxi-db"
license = "MIT OR Apache-2.0"
keywords = ["database", "embedded", "key-value", "storage"]
categories = ["database", "data-structures"]
readme = "README.md"

[lib]
name = "oxi_db"
path = "src/lib.rs"

[[bin]]
name = "oxi-db"
path = "src/main.rs"

[features]
default = []
cli = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3"
